[package]
description = "`inline storage of `Any` type"
documentation = "https://docs.rs/inline_any"
edition = "2018"
homepage = "https://www.crates.io/crates/inline_any"
license = "MIT OR Apache-2.0"
name = "inline_any"
readme = "README.md"
repository = "https://github.com/Cyborus04/inline_any/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soft_assert = "0.1"
typeless = "0.1"
